[gd_scene load_steps=2 format=3 uid="uid://dxlt8gv3h8jt1"]

[ext_resource type="Script" uid="uid://bi7pyqv3elbpb" path="res://Scripts/Shop.gd" id="1_kjfcx"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kjfcx")

[node name="CoinsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
theme_override_font_sizes/font_size = 20
text = "$ 0"

[node name="ShopContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 90.0
offset_bottom = 140.0
theme_override_constants/separation = 15

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1100.0
offset_top = 600.0
offset_right = 1130.0
offset_bottom = 631.0
text = "Go"
